Make Hippo 12 image